<resources>
    <string name="app_name">AMSAT Status</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_maps">Map</string>
    <string name="uplink_and_downlink_active">Uplink and Downlink Active</string>
    <string name="downlink_only">Downlink Only</string>
    <string name="not_heard">Not Heard</string>
    <string name="iss_crew_voice_active">ISS Crew (Voice) Active</string>
    <string name="callsign">Callsign</string>
    <string name="grid">Grid</string>
    <string name="satellite">Satellite</string>
    <string name="submit_report">Submit Report</string>
    <string name="local_time">Local Time</string>
    <string name="utc_time">UTC Time</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="defaults_header">Defaults</string>
    <string name="display_header">Display</string>

    <!-- Defaults Preferences -->

    <!-- Display Preferences -->
    <string name="use_local_time">Use local time</string>
    <string name="use_local_time_on">Time is in local time</string>
    <string name="use_local_time_off">Time is in UTC</string>

    <string name="title_analytics">Analytics Opt-in</string>
    <string name="title_anonymous_usage">Anonymous usage statistics</string>
    <string name="title_crash_reports">Automatically submit crash reports</string>

    <string name="preference_callsign">callsign</string>
    <string name="preference_default_grid">default_grid</string>
    <string name="preference_satellite">satellite</string>
    <string name="preference_local_time">local_time</string>
    <string name="preference_asked_for_consent">asked_for_consent</string>
    <string name="preference_enable_analytics">enable_analytics</string>
    <string name="preference_enable_crash_reports">enable_crash_reports</string>
    <string name="find_my_grid_square">Find my grid square</string>
    <string name="utc">UTC</string>
    <string name="settings">Settings</string>
</resources>
